# tfilereader

./: .gitignore  README.md  main.py  pyproject.toml
src/tfile_reader/: __init__.py  tfile_reader.py
