[project]
name = "tfile-reader"
version = "0.1.0"
description = "Apache Hadoop TFile Reader"
readme = "README.md"
authors = [
    { name = "Andrey Makarov", email = "winandfx@gmail.com" }
]
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
